# LuxBot

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  update database.bat
