[project]
name = "study-nb"
version = "0.1.0"
description = "study-nb"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_datastore"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
